--- a/src/mu0Qt/ui/test.ui
+++ b/src/mu0Qt/ui/test.ui
@@ -6,97 +6,425 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1008</width>
-    <height>508</height>
+    <width>882</width>
+    <height>547</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Testez Vos Connaissances</string>
+   <string>Tester ses connaissances</string>
   </property>
   <widget class="QListWidget" name="listWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>331</width>
-     <height>211</height>
+     <width>181</width>
+     <height>331</height>
     </rect>
    </property>
   </widget>
-  <widget class="QTextEdit" name="textEdit">
+  <widget class="QLabel" name="label">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>340</y>
-     <width>961</width>
-     <height>81</height>
+     <x>250</x>
+     <y>-10</y>
+     <width>621</width>
+     <height>291</height>
     </rect>
    </property>
-   <property name="html">
-    <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:8pt;&quot;&gt;ZONE TABLEAU&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   <property name="text">
+    <string>Schéma circuit</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>450</y>
-     <width>181</width>
+     <x>800</x>
+     <y>520</y>
+     <width>75</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
     <string>PushButton</string>
    </property>
+  </widget>
+  <widget class="QTableWidget" name="tableWidget">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>340</y>
+     <width>651</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <attribute name="horizontalHeaderDefaultSectionSize">
+    <number>50</number>
+   </attribute>
+   <attribute name="horizontalHeaderMinimumSectionSize">
+    <number>50</number>
+   </attribute>
+   <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+    <bool>true</bool>
+   </attribute>
+   <attribute name="verticalHeaderDefaultSectionSize">
+    <number>20</number>
+   </attribute>
+   <row>
+    <property name="text">
+     <string>valeur</string>
+    </property>
+   </row>
+   <column>
+    <property name="text">
+     <string notr="true">opcode</string>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>accZ</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>acc15</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>selA</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>selB</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>selC</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>pc_ld</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>ir_ld</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>acc_ld</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>acc_oe</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>alufs</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>rnw</string>
+    </property>
+   </column>
+  </widget>
+  <widget class="QTableWidget" name="tableWidget_2">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>400</y>
+     <width>651</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <attribute name="horizontalHeaderDefaultSectionSize">
+    <number>50</number>
+   </attribute>
+   <attribute name="horizontalHeaderMinimumSectionSize">
+    <number>50</number>
+   </attribute>
+   <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+    <bool>true</bool>
+   </attribute>
+   <attribute name="verticalHeaderDefaultSectionSize">
+    <number>20</number>
+   </attribute>
+   <row>
+    <property name="text">
+     <string>valeur</string>
+    </property>
+   </row>
+   <column>
+    <property name="text">
+     <string notr="true">opcode</string>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>accZ</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>acc15</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>selA</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>selB</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>selC</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>pc_ld</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>ir_ld</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>acc_ld</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>acc_oe</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>alufs</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>rnw</string>
+    </property>
+   </column>
+  </widget>
+  <widget class="QTableWidget" name="tableWidget_3">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>280</y>
+     <width>651</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <attribute name="horizontalHeaderDefaultSectionSize">
+    <number>50</number>
+   </attribute>
+   <attribute name="horizontalHeaderMinimumSectionSize">
+    <number>50</number>
+   </attribute>
+   <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+    <bool>true</bool>
+   </attribute>
+   <attribute name="verticalHeaderDefaultSectionSize">
+    <number>20</number>
+   </attribute>
+   <row>
+    <property name="text">
+     <string>valeur</string>
+    </property>
+   </row>
+   <column>
+    <property name="text">
+     <string notr="true">opcode</string>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>accZ</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>acc15</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>selA</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>selB</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>selC</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>pc_ld</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>ir_ld</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>acc_ld</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>acc_oe</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>alufs</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>rnw</string>
+    </property>
+   </column>
+  </widget>
+  <widget class="QTableWidget" name="tableWidget_4">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>460</y>
+     <width>651</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <attribute name="horizontalHeaderDefaultSectionSize">
+    <number>50</number>
+   </attribute>
+   <attribute name="horizontalHeaderMinimumSectionSize">
+    <number>50</number>
+   </attribute>
+   <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+    <bool>true</bool>
+   </attribute>
+   <attribute name="verticalHeaderDefaultSectionSize">
+    <number>20</number>
+   </attribute>
+   <row>
+    <property name="text">
+     <string>valeur</string>
+    </property>
+   </row>
+   <column>
+    <property name="text">
+     <string notr="true">opcode</string>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>accZ</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>acc15</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>selA</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>selB</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>selC</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>pc_ld</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>ir_ld</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>acc_ld</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>acc_oe</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>alufs</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>rnw</string>
+    </property>
+   </column>
   </widget>
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>730</x>
-     <y>440</y>
-     <width>211</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>PushButton</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="pushButton_3">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>240</y>
-     <width>181</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>PushButton</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>510</x>
-     <y>20</y>
-     <width>771</width>
-     <height>311</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>TextLabel</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="pushButton_4">
-   <property name="geometry">
-    <rect>
-     <x>260</x>
-     <y>240</y>
+     <x>30</x>
+     <y>350</y>
      <width>75</width>
      <height>23</height>
     </rect>
@@ -107,22 +435,5 @@ p, li { white-space: pre-wrap; }
   </widget>
  </widget>
  <resources/>
- <connections>
-  <connection>
-   <sender>pushButton_2</sender>
-   <signal>clicked()</signal>
-   <receiver>Test</receiver>
-   <slot>hide()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>643</x>
-     <y>481</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>583</x>
-     <y>483</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
