--- a/src/mu0Qt/ui/mainwindow.ui
+++ b/src/mu0Qt/ui/mainwindow.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>MainWindow</class>
- <widget class="QMainWindow" name="Mu0">
+ <widget class="QMainWindow" name="MainWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,14 +11,14 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>SIMULATEUR GRAPHIQUE MU0</string>
+   <string>Simulateur Graphique Mu0</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
       <x>100</x>
-      <y>-20</y>
+      <y>-10</y>
       <width>651</width>
       <height>61</height>
      </rect>
@@ -30,19 +30,6 @@
     </property>
     <property name="text">
      <string>Bienvenue dans votre simulateur graphique</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>70</y>
-      <width>61</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>OBJECTIF</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_3">
@@ -60,7 +47,7 @@
      </font>
     </property>
     <property name="text">
-     <string>Permettre à tout étudiant de l'enib et tout étudiant en école d'ingénieurs  de maitriser les bases du microprocesseur</string>
+     <string>OBJECTIF : Permettre à tout étudiant de l'enib et tout étudiant de maitriser les bases du microprocesseur</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_4">
@@ -91,42 +78,23 @@
    </widget>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
+   <property name="movable">
+    <bool>false</bool>
+   </property>
+   <property name="floatable">
+    <bool>false</bool>
+   </property>
    <attribute name="toolBarArea">
     <enum>LeftToolBarArea</enum>
    </attribute>
    <attribute name="toolBarBreak">
-    <bool>true</bool>
+    <bool>false</bool>
    </attribute>
    <addaction name="actionApprendre"/>
    <addaction name="actionTest"/>
    <addaction name="actionAide"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
-  <widget class="QMenuBar" name="menuBar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>917</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <widget class="QMenu" name="menuMenu">
-    <property name="title">
-     <string>Menu</string>
-    </property>
-    <addaction name="actionApprendre"/>
-    <addaction name="actionTest"/>
-    <addaction name="actionAide"/>
-   </widget>
-   <widget class="QMenu" name="menu">
-    <property name="title">
-     <string>      </string>
-    </property>
-   </widget>
-   <addaction name="menuMenu"/>
-   <addaction name="menu"/>
-  </widget>
   <action name="actionApprendre">
    <property name="text">
     <string>Apprendre</string>
