--- a/src/mu0Qt/ui/mainwindow.ui
+++ b/src/mu0Qt/ui/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>917</width>
-    <height>427</height>
+    <width>1064</width>
+    <height>563</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -53,24 +53,30 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>90</y>
-      <width>671</width>
-      <height>271</height>
+      <x>30</x>
+      <y>60</y>
+      <width>741</width>
+      <height>501</height>
      </rect>
     </property>
+    <property name="whatsThis">
+     <string/>
+    </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string>Affichage du schéma mu0</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>710</x>
-      <y>360</y>
-      <width>75</width>
-      <height>23</height>
+      <x>820</x>
+      <y>490</y>
+      <width>101</width>
+      <height>41</height>
      </rect>
+    </property>
+    <property name="whatsThis">
+     <string notr="true"/>
     </property>
     <property name="text">
      <string>PushButton</string>
@@ -91,7 +97,9 @@
     <bool>false</bool>
    </attribute>
    <addaction name="actionApprendre"/>
+   <addaction name="separator"/>
    <addaction name="actionTest"/>
+   <addaction name="separator"/>
    <addaction name="actionAide"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
